bare_metal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bare-metal-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bare-metal-app
  template:
    metadata:
      labels:
        app: bare-metal-app
    spec:
      containers:
      - name: app
        image: pratyush063099/bare-metal-app:latest
        ports:
        - containerPort: 3000
