bare_metal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bare-metal-service
spec:
  selector:
    app: bare-metal-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
