bare_metal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bare-metal-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  tls:
  - hosts:
    - localhost
    secretName: bare-metal-tls
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bare-metal-service
            port:
              number: 80
